[CONFIG] Filtros agregados y funcionales

--- a/public/index.html
+++ b/public/index.html
@@ -123,12 +123,12 @@
         </section>
 
         <section class="toPlay">
-            <h2>Vamos a jugar</h2>
+            <!-- <h2>Vamos a jugar</h2>
             <input type="text" placeholder="Nickname">
             <div>
                 <button>Aventura</button>
                 <button>Multijugador</button>
-            </div>
+            </div> -->
         </section>
 
         <section id="ver-mapa">
