[CONFIG] Filtros agregados y funcionales

--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,7 @@
         </section>
 
         <section class="toPlay">
+            <p style="font-size: 5rem; color:black; text-align: center;">Pronto estara listo para jugar</p>
             <!-- <h2>Vamos a jugar</h2>
             <input type="text" placeholder="Nickname">
             <div>
