--- a/public/index.html
+++ b/public/index.html
@@ -123,22 +123,27 @@
         </section>
 
         <section class="toPlay">
-            <p style="font-size: 5rem; color:black; text-align: center;">Pronto estara listo para jugar</p>
-            <!-- <h2>Vamos a jugar</h2>
-            <input type="text" placeholder="Nickname">
+            <!-- <p style="font-size: 5rem; color:black; text-align: center;">Pronto estara listo para jugar</p> -->
+            <h2>Vamos a jugar</h2>
+            <input type="text" placeholder="Nickname" id="nickname">
+            <p>Seleccion tu pokemon desde la pokedesk antes de empezar a jugar.</p>
             <div>
-                <button>Aventura</button>
+                <button onclick="playSingle()">Aventura</button>
                 <button>Multijugador</button>
-            </div> -->
+            </div>
         </section>
 
         <section id="ver-mapa">
             <h1>Recorrer el mapa</h1>
-            <canvas id="mapa"></canvas>
-            <button onmouseup="detener()" onmousedown="mover('left')" ontouchstart="mover('left')" ontouchend="detener()">Izquierda</button>
-            <button onmouseup="detener()" onmousedown="mover('up')" ontouchstart="mover('up')" ontouchend="detener()">Arriba</button>
-            <button onmouseup="detener()" onmousedown="mover('down')" ontouchstart="mover('down')" ontouchend="detener()">Abajo</button>
-            <button onmouseup="detener()" onmousedown="mover('right')" ontouchstart="mover('right')" ontouchend="detener()">Derecha</button>
+            <div class="container-mapa">
+                <canvas id="mapa"></canvas>
+            </div>
+            <button onmouseup="detener()" onmousedown="mover('up')" ontouchstart="mover('up')" ontouchend="detener()">↥</button>
+            <div>
+                <button onmouseup="detener()" onmousedown="mover('left')" ontouchstart="mover('left')" ontouchend="detener()">↤</button>
+                <button onmouseup="detener()" onmousedown="mover('right')" ontouchstart="mover('right')" ontouchend="detener()">↦</button>
+            </div>
+            <button onmouseup="detener()" onmousedown="mover('down')" ontouchstart="mover('down')" ontouchend="detener()">↧</button>
         </section>
 
         <!-- <button onclick="joinToGame()">Multijugador</button> -->
